# QT_VideoPlayerApp

./: ButtonComp.qml  CMakeLists.txt  README.md  SliderComp.qml  SwitchComp.qml  VideoAudio.qml  VideoButton.qml  VideoControls.qml  VideoFile.qml  VideoSlider.qml  choosefile.cpp  choosefile.h  filedialog.h  main.cpp  main.qml  qml.qrc  resource.qrc
